# Sozi

./: .csslintrc  .gitignore  .jshintrc  CMakeLists.txt  Gruntfile.js  INSTALL  Makefile  README  README.jsdoc.md  README.md  SConstruct  VERSION  autolint.js  bower.json  buildConfig.example.js  compress.sh  config.default.json  config.linux-x64.json  csslintrc.json  eslintrc.json  gulpfile.js  index-electron.html  index-webapp.html  index-webapp.js  index.html  jsconfig.json  jsdoc.json  package-lock.json  package.json  release.sh  sozi.css  sozi.inx  sozi.py  sozi_edit_frame.inx  sozi_edit_frame.py  sozi_install.inx  sozi_install.py
.github/: ISSUE_TEMPLATE.md
config/: csslintrc.json  eslintrc.json  eslintrc.mjs  jsdoc.json  sozi-all-x64.json  sozi-default.json  sozi-linux-x64.json
css/: editor-colors.css  editor-fonts.css  editor-layout.css  editor.css  sozi.editor.view.Preview.css  sozi.editor.view.Properties.css  sozi.editor.view.Timeline.css  sozi.editor.view.Toolbar.css  sozi.editor.view.css
debian/: Makefile  changelog  control  links  rules
doc/: CMakeLists.txt  INSTALL  MIT-license.txt  install-en.html  install-fr.html  startup.plantuml
doc/presentations/2014-02-01-FOSDEM/: .gitignore  2014-02-01-fosdem-lightning-talk-sozi.screen.sozi.html  2014-02-01-fosdem-lightning-talk-sozi.screen.sozi.json
doc/presentations/Website/: ceci-nest-pas-un-diaporama.fast.sozi.html  ceci-nest-pas-un-diaporama.fast.sozi.json  isso-nao-e-um-slideshow  isso-nao-e-um-slideshow.html  isso-nao-e-um-slideshow.json  this-is-not-a-slideshow.fast.sozi.html  this-is-not-a-slideshow.fast.sozi.json
editor/: sozi.py
editors/: CMakeLists.txt  SConscript
editors/inkscape/: CMakeLists.txt  SConscript  sozi.glade  sozi.inx  sozi.py  sozi_extras_addvideo.py  sozi_extras_link.inx  sozi_extras_link.py  sozi_extras_media.inx  sozi_extras_media.py  sozi_extras_remove_link.inx  sozi_extras_remove_link.py  sozi_extras_upgrade.inx  sozi_extras_upgrade.py  sozi_upgrade.py
editors/inkscape/extras/: sozi_extras_addvideo.inx  sozi_extras_addvideo.py  sozi_extras_addvideo_upgrade.py  sozi_extras_upgrade.inx  sozi_extras_upgrade.py
editors/inkscape/sozi/: __init__.py  actions.py  document.py  fields.py  media_upgrade.py  ui.glade  ui.py  upgrade.py  version.py  version.py.in
editors/inkscape/sozi/lang/: de.po  es.po  fr.po  hu.po  it.po  nn.po  pt_BR.po
editors/inkscape/sozi/lang/de/: CMakeLists.txt  sozi.po
editors/inkscape/sozi/lang/es/: CMakeLists.txt  sozi.po
editors/inkscape/sozi/lang/fr/: CMakeLists.txt  sozi.po
editors/inkscape/sozi/lang/it/: CMakeLists.txt
editors/inkscape/sozi/lang/nl/: CMakeLists.txt  sozi.po
editors/inkscape/sozi/lang/nn/: CMakeLists.txt  sozi.po
editors/inkscape/sozi/lang/pt_BR/: CMakeLists.txt  sozi.po
editors/inkscape/sozi/lang/sv/: CMakeLists.txt  sozi.po
editors/nw/: Gruntfile.js  index.html  package.json
editors/svg-edit/: README
extras/: sozi_extras_addvideo.inx  sozi_extras_addvideo.js  sozi_extras_addvideo.py
extras/media/: sozi_extras_media.inx  sozi_extras_media.py
extras/media-inkscape-1.0/: sozi_extras_media.inx  sozi_extras_media.py
extras/presenter/: index.html  presenter.css  presenter.js  upload.sh
extras/texts2paths/: texts2paths.py
fonts/Arsenal/: stylesheet.css
installation-assets/linux/: install-local.sh  (+1 more)
js/: Controller.js  Storage.js  animator.js  common.js  display.js  editor.js  electron.js  exporter.js  html2canvas.min.js  i18n.js  index.js  namespace.js  player.js  presenter.js  remoteControl.js  sozi.editor.backend.AbstractBackend.js  sozi.editor.backend.FileReader.js  sozi.editor.backend.GoogleDrive.config.dist.js  sozi.editor.backend.GoogleDrive.js  sozi.editor.backend.NodeWebkit.js  sozi.editor.main.js  sozi.editor.model.Editor.js  sozi.editor.model.Selection.js  sozi.editor.view.Preview.js  sozi.editor.view.Properties.js  sozi.editor.view.Timeline.js  sozi.model.Object.js  sozi.model.Presentation.js  sozi.model.Presentation.upgrade.js  sozi.player.Animator.js  sozi.player.Camera.js  sozi.player.Player.js  sozi.player.Viewport.js  sozi.player.media.js  sozi.player.timing.js  upgrade.js  utils.js
jsdoc-templates/: dataType.tmpl  fullName.tmpl  function.tmpl  index.tmpl  publish.js  style.css  variable.tmpl  visibility.tmpl
locales/: ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  fa.po  fi.po  fr.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  kab.po  ko.po  lt.po  lzh.po  messages.pot  ms.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  tr.po  zh_Hans.po  zh_Latn.po  zh_TW.po
player/: CMakeLists.txt  SConscript  actions.js  animation.js  animator.js  common.js  display.js  document.js  events.js  framelist.js  location.js  player.js  sozi.css  sozi.js
player/css/: SConscript  sozi.css
player/js/: SConscript  actions.js  animation.js  display.js  document.js  events.js  framelist.js  framenumber.js  links.js  location.js  module.js  namespace.js  player.js  proto.js  sozi.js
player/js/extras/: sozi_extras_addvideo.js  sozi_extras_media.js
player/tools/: header  minifier  minify  version
presentator/: default.json  index.html
samples/: ceci-nest-pas-un-diaporama.html  first-presentation.sozi.html  first-presentation.sozi.json  hyperlinks.sozi.html  hyperlinks.sozi.json  parallax.sozi.html  parallax.sozi.json  this-is-not-a-slideshow.html  transition-path.sozi.html  transition-path.sozi.json  transition-zoom.sozi.html  transition-zoom.sozi.json  tutorial-layers.sozi.html  tutorial-layers.sozi.json  using-layers.sozi.html  using-layers.sozi.json
site_scons/: site_init.py
src/: index-browser.html  index-electron.html
templates/: player.html  presenter.html  remoteControl.html  sozi.editor.view.Timeline.html  sozi.export.html  sozi.player.html
test/: 01.html  sozi.display.Animator.test.html  sozi.display.Animator.test.js  sozi.display.timing.test.html  sozi.display.timing.test.js  sozi.model.Object.mocha.js
tools/: deps.sh  sozi2pdf  sozi2pdf.js  sozi2pdf.py
www/: .gitignore  Makefile  develop_server.sh  pelicanconf.py  publishconf.py
(+252 files in other folders)
